style.css: add outline to inline post images

--- a/sic/static/style.css
+++ b/sic/static/style.css
@@ -155,6 +155,10 @@ img {
   max-width: 100%;
 }
 
+p>img {
+  outline: 1px solid #a7a7a7;
+}
+
 /* Forms
    ========================================================================== */
 
