Fix password reset sequence not working

--- a/sic/templates/account/password_reset.html
+++ b/sic/templates/account/password_reset.html
@@ -3,23 +3,16 @@
 {% block content %}
     <h2>Password Reset</h2>
 
-    {% if next %}
-        {% if user.is_authenticated %}
-            <p>Your account doesn't have access to this page. To proceed,
-                please login with an account that has access.</p>
-        {% else %}
-            <p>Please login to see this page.</p>
-        {% endif %}
-    {% endif %}
-
     {% if user.is_authenticated %}
+        <p>You are already authenticated.</p>
     {% else %}
-        <form method="post" action="{% url 'login' %}">
+        <p>Forgotten your password? Enter your email address below, and we’ll email instructions for setting a new one.</p>
+        <form method="post">
             {% csrf_token %}
             <table>
                 {{ form }}
             </table>
-            <input type="submit" value="send email">
+            <input type="submit" value="send password reset email">
             <input type="hidden" name="next" value="{{ next }}">
         </form>
     {% endif %}
