Move logout link from header to account page
This will save some space for the header and prevent accidental logouts
in mobile devices.

--- a/sic/templates/account/account.html
+++ b/sic/templates/account/account.html
@@ -56,6 +56,7 @@
             <li><a href="{% url 'notifications' %}">Notification History</a></li>
             <li><a href="{% url 'inbox' %}">Message Inbox</a></li>
             <li><a href="{% url 'password_change' %}">Change Password</a></li>
+            <li><a href="{% url 'logout' %}" id="logout_link">Logout</a></li>
         </ul>
     </nav>
     <h1>Your Account</h1>
