--- a/sic/static/style.css
+++ b/sic/static/style.css
@@ -13,6 +13,7 @@
  */
 
 html {
+  font-size: 1em;
   line-height: 1.2; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
 }
@@ -66,7 +67,7 @@ hr {
  */
 
 pre {
-  font-family: monospace, monospace; /* 1 */
+  font-family: var(--monospace-system-stack);
   font-size: 1em; /* 2 */
 }
 
@@ -109,7 +110,7 @@ strong {
 code,
 kbd,
 samp {
-  font-family: monospace, monospace; /* 1 */
+  font-family: var(--monospace-system-stack);
   font-size: 1em; /* 2 */
 }
 
@@ -414,14 +415,41 @@ template {
 }
 
 html, body {
-  font-family: "Inter", sans-serif;
-  font-size: 1.0625rem;
-  font-size: min(1.0625rem, 16px);
-  font-size: clamp(16px, 1.0625rem, 16px);
+  font-family: var(--grotesque-system-stack);
   width: 100%;
   height: 100%;
   background: var(--bg-color);
   color: var(--fg-color);
+}
+
+:root {
+  --fg-color: black;
+  --bg-color: white;
+  --header-bg-color: #eee;
+  --theme-color: #1e82be;
+  --upvote-arrow-color:#bbb;
+  --upvote-arrow-upvoted-color: #ac130d;
+  --message-success-bg: #dfd;
+  --message-warning-bg: #ffc;
+  --message-error-bg: #f77;
+  --main-width: 83.3vw;
+  --entry-separator-color: #c7ddde;
+  --netloc-color: darkslategray;
+  --story-title-font-size: 1.1rem;
+  --link-color: #4141c7;
+  --new-user-fg: green;
+  --banned-user-fg: #d6d6d6;
+  --feed-color: #dc3545;
+  --build-color: #2f4f4f;
+  --tag-border-color: #0000005e;
+  --pre-bg-color: #e9e9e9;
+  --targetbg-color: #ffffa1;
+  --emoji-system-stack: 'Twemoji Mozilla', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  --monospace-system-stack: /* apple */ ui-monospace, SFMono-Regular, Menlo, Monaco,
+  /* windows */ "Cascadia Mono", "Segoe UI Mono", Consolas,
+  /* free unixes */ "DejaVu Sans Mono", "Liberation Mono", "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro", "Fira Mono", "Droid Sans Mono", "Courier New", monospace, var(--emoji-system-stack);
+  --sans-serif-system-stack:-apple-system,BlinkMacSystemFont,Roboto,Roboto Slab,Droid Serif,Segoe UI,system-ui,Arial,sans-serif, var(--emoji-system-stack);
+  --grotesque-system-stack: "Inter", Roboto, 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', Arial, sans-serif, var(--emoji-system-stack);
 }
 
 body {
@@ -434,6 +462,9 @@ body {
   width: 100%;
   height: 100%;
   align-content: space-between;
+  background:
+    var(--bg-color)
+    url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='10' viewBox='0 0 4 4'%3E%3Cpath fill='%23666' opacity='0.06' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
 }
 
 body>* {
@@ -755,6 +786,8 @@ figure#avatar-thumbnail figcaption {
   word-wrap: break-word;
   hyphens: auto;
   overflow: auto;
+  font-size: 0.8rem;
+  text-justify: none;
 }
 
 .votes {
@@ -1031,13 +1064,13 @@ input[type="checkbox"].comment {
 input[type="checkbox"].comment:checked~label.comment:before{
   content: '[+]';
   padding: 2px; /* increase hit area*/
-  font-family: monospace;
+  font-family: var(--monospace-system-stack);
 }
 
 input[type="checkbox"].comment:not(:checked)~label.comment:before{
   content: '[-]';
   padding: 2px; /* increase hit area*/
-  font-family: monospace;
+  font-family: var(--monospace-system-stack);
 }
 
 input[type="checkbox"].comment ~ div.replies {
@@ -1473,7 +1506,7 @@ ul.inline-comma-sep-list>li>details>summary+ul.inline-comma-sep-list{
 }
 
 div.showing-aggregations {
-  font-size: medium;
+  font-size: 0.75rem;
   display: inline-block;
   margin-bottom: .5rem;
 }
@@ -1742,6 +1775,7 @@ nav.pagination {
   border-radius: .2em;
   text-decoration: none;
   font-size: 12px;
+  font-size: max(12px, 0.7rem);
 }
 .pagination a:visited {
   color: var(--fg-color);
